--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <nav>
       <h2 class="nav-logo">OXYGENShop</h2>
       <div class="menu">
-        <img src="./images/rectangle_menu.png" />
-        <img src="./images/rectangle_menu.png" />
-        <img src="./images/rectangle_menu.png" />
+        <img class="rectangle-menu" src="./images/rectangle_menu.png" />
+        <img class="rectangle-menu" src="./images/rectangle_menu.png" />
+        <img class="rectangle-menu" src="./images/rectangle_menu.png" />
       </div>
       <ul>
         <li><a>WHY US</a></li>
@@ -28,7 +28,7 @@
       </ul>
     </nav>
 
-    <main>
+    <!-- <main>
       <section id="sellMore"></section>
 
       <section id="rectangle3"></section>
@@ -44,6 +44,6 @@
       <div>
         
       </div>
-    </footer>
+    </footer> -->
   </body>
 </html>
