--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <nav>
       <h2 class="nav-logo">OXYGENShop</h2>
       <div class="menu">
-        <img class="rectangle-menu" src="./images/rectangle_menu.png" />
-        <img class="rectangle-menu" src="./images/rectangle_menu.png" />
-        <img class="rectangle-menu" src="./images/rectangle_menu.png" />
+        <img class="rectangle-menu" src="./images/vector_rectangle_menu.png" />
+        <img class="rectangle-menu" src="./images/vector_rectangle_menu.png" />
+        <img class="rectangle-menu" src="./images/vector_rectangle_menu.png" />
       </div>
       <ul>
         <li><a>WHY US</a></li>
@@ -28,8 +28,50 @@
       </ul>
     </nav>
 
-    <!-- <main>
-      <section id="sellMore"></section>
+    <main>
+      <header>
+        <h1>Sell More!</h1>
+        <p>
+          Open shop on our platform and <br />
+          increase your sales
+        </p>
+        <button>Open your shop</button>
+        <div class="header-img-container">
+          <img
+            class="header-img"
+            src="https://s3-alpha-sig.figma.com/img/c3f9/6a42/6648411f57f04aff84de5d247f55d2a8?Expires=1719792000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=U2XCLt6kDyMZigQk5C~lG2UxWdd0BZJkkcGxw5KajmQ5CJ8ALYFTTYmTy1Z5Ykwqj2Ib4A1bIXBaRlmQ-QfxgGf9zoYOSklKqnOrFA7qHeprpCZP4IajK25uBCtXkFbXBSd5XnQZC7IVr~IWu~vZ1lCNE7qjjbf~04bhHNt2hQWRNeKGrsCwV~aGtUgkK0hO6HxsaYPF4TeRKQePeQ7Wfn5Mg9r1NtxgRJJqJDQa1ss6wg97lIxTio18meDSeUOlqLRYoMouyc15MbjLnwgK4KT-Q6zggXf0~PvfZZ3eiHpVwzYyGza9T-~L8J4T~mUT1qftN7Sp2CPBMrBMKVgUQw__"
+          />
+        </div>
+        <h3>
+          The most popular <br />
+          sales platform in <br />
+          country
+        </h3>
+        <div class="card">
+          <div class="icons-card">
+            <img />
+            <img />
+          </div>
+          <p></p>
+          <p></p>
+        </div>
+        <div class="card">
+          <div class="icons-card">
+            <img />
+            <img />
+          </div>
+          <p></p>
+          <p></p>
+        </div>
+        <div class="card">
+          <div class="icons-card">
+            <img />
+            <img />
+          </div>
+          <p></p>
+          <p></p>
+        </div>
+      </header>
 
       <section id="rectangle3"></section>
 
@@ -38,8 +80,8 @@
       <section id="contact"></section>
     </main>
 
-    <footer>
-      <h1>OXYGENShop</h1>
+    <!-- <footer>
+      <h2 class="nav-logo">OXYGENShop</h2>
       <p>© 2022 OXYGEN, All Rights Reserved</p>
       <div>
         
