--- a/index.html
+++ b/index.html
@@ -47,30 +47,43 @@
           sales platform in <br />
           country
         </h3>
-        <div class="card">
-          <div class="icons-card">
-            <img />
-            <img />
+        <div class="card_header">
+          <div class="container_icons">
+            <div class="pink">
+                <div class="container_vectors">
+                <img class="head" src="./images/vectort_head.png" />
+                <img class="body" src="./images/vector_body.png" />
+              </div>
+            </div>
           </div>
-          <p></p>
-          <p></p>
+          <p class="title"><strong>100000+</strong></p>
+          <p class="text">daily entries</p>
         </div>
-        <div class="card">
-          <div class="icons-card">
-            <img />
-            <img />
+        <div class="card_header">
+          <div class="container_icons">
+            <div class="blue">
+                <div class="container_vectors">
+                <img class="head" src="./images/vectort_head.png" />
+                <img class="body" src="./images/vector_body.png" />
+              </div>
+            </div>
           </div>
-          <p></p>
-          <p></p>
+          <p class="title"><strong>100000+</strong></p>
+          <p class="text">daily entries</p>
         </div>
-        <div class="card">
-          <div class="icons-card">
-            <img />
-            <img />
+        <div class="card_header">
+          <div class="container_icons">
+            <div class="pink">
+                <div class="container_vectors">
+                <img class="head" src="./images/vectort_head.png" />
+                <img class="body" src="./images/vector_body.png" />
+              </div>
+            </div>
           </div>
-          <p></p>
-          <p></p>
+          <p class="title"><strong>100000+</strong></p>
+          <p class="text">daily entries</p>
         </div>
+        
       </header>
 
       <section id="rectangle3"></section>
