--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="card_header">
           <div class="container_icons">
             <div class="pink">
-                <div class="container_vectors">
+              <div class="container_vectors">
                 <img class="head" src="./images/vectort_head.png" />
                 <img class="body" src="./images/vector_body.png" />
               </div>
@@ -62,28 +62,18 @@
         <div class="card_header">
           <div class="container_icons">
             <div class="blue">
+              <div class="container_vectors">
                 <div class="container_vectors">
-                <img class="head" src="./images/vectort_head.png" />
-                <img class="body" src="./images/vector_body.png" />
+                  <img class="eye1" src="./images/vector_eye1.png" />
+                  <img class="eye2" src="./images/vector_eye2.png" />
+                  <img class="eye3" src="./images/vector_eye3.png" />
+                </div>
               </div>
             </div>
           </div>
-          <p class="title"><strong>100000+</strong></p>
-          <p class="text">daily entries</p>
+          <p class="title"><strong>2000000+</strong></p>
+          <p class="text">seen products every day</p>
         </div>
-        <div class="card_header">
-          <div class="container_icons">
-            <div class="pink">
-                <div class="container_vectors">
-                <img class="head" src="./images/vectort_head.png" />
-                <img class="body" src="./images/vector_body.png" />
-              </div>
-            </div>
-          </div>
-          <p class="title"><strong>100000+</strong></p>
-          <p class="text">daily entries</p>
-        </div>
-        
       </header>
 
       <section id="rectangle3"></section>
