--- a/index.html
+++ b/index.html
@@ -74,6 +74,22 @@
           <p class="title"><strong>2000000+</strong></p>
           <p class="text">seen products every day</p>
         </div>
+        <div class="card_header">
+          <div class="container_icons">
+            <div class="green">
+              <div class="container_vectors">
+                <div class="container_vectors">
+                  <img class="box1" src="./images/vector_box1.png" />
+                  <img class="box2" src="./images/vector_box2.png" />
+                  <img class="box3" src="./images/vector_box3.png" />
+                  <img class="box4" src="./images/vector_box4.png" />
+                </div>
+              </div>
+            </div>
+          </div>
+          <p class="title"><strong>10000+</strong></p>
+          <p class="text">added posts daily</p>
+        </div>
       </header>
 
       <section id="rectangle3"></section>
