repaso con hector

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <nav>
-      <h2 class="nav-logo">OXYGENShop</h2>
+      <h2 class="logo_Oxygen">OXYGENShop</h2>
       <div class="menu">
         <img class="rectangle-menu" src="./images/vector_rectangle_menu.png" />
         <img class="rectangle-menu" src="./images/vector_rectangle_menu.png" />
@@ -99,12 +99,19 @@
       <section id="contact"></section>
     </main>
 
-    <!-- <footer>
-      <h2 class="nav-logo">OXYGENShop</h2>
-      <p>© 2022 OXYGEN, All Rights Reserved</p>
+    <footer>
+      <h2 class="logo_Oxygen">OXYGENShop</h2>
+      <p class="copyright">© 2022 OXYGEN, All Rights Reserved</p>
       <div>
-        
+        <div class="x">
+          <img class="bird" src="./images/vector_bird.png" />
+          <img class="" />
+        </div>
+        <div class="facebook">
+          <img />
+          <img />
+        </div>
       </div>
-    </footer> -->
+    </footer>
   </body>
 </html>
