organize css in different files

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" type="text/css" href="./styles/index.css" />
+    <link rel="stylesheet" type="text/css" href="./styles/nav/nav.css" />
+    <link rel="stylesheet" type="text/css" href="./styles/header/header.css" />
+    <link rel="stylesheet" type="text/css" href="./styles/section1/section1.css" />
+    <link rel="stylesheet" type="text/css" href="./styles/Components/Cards/Card_section1/" />
+    
   </head>
   <body>
     <nav>
@@ -27,21 +32,22 @@
         <li><a>CONTACT</a></li>
       </ul>
     </nav>
-
+    <header>
+      <h1>Sell More!</h1>
+      <p>
+        Open shop on our platform and <br />
+        increase your sales
+      </p>
+      <button>Open your shop</button>
+      <div class="header-img-container">
+        <img
+          class="header-img"
+          src="https://s3-alpha-sig.figma.com/img/c3f9/6a42/6648411f57f04aff84de5d247f55d2a8?Expires=1719792000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=U2XCLt6kDyMZigQk5C~lG2UxWdd0BZJkkcGxw5KajmQ5CJ8ALYFTTYmTy1Z5Ykwqj2Ib4A1bIXBaRlmQ-QfxgGf9zoYOSklKqnOrFA7qHeprpCZP4IajK25uBCtXkFbXBSd5XnQZC7IVr~IWu~vZ1lCNE7qjjbf~04bhHNt2hQWRNeKGrsCwV~aGtUgkK0hO6HxsaYPF4TeRKQePeQ7Wfn5Mg9r1NtxgRJJqJDQa1ss6wg97lIxTio18meDSeUOlqLRYoMouyc15MbjLnwgK4KT-Q6zggXf0~PvfZZ3eiHpVwzYyGza9T-~L8J4T~mUT1qftN7Sp2CPBMrBMKVgUQw__"
+        />
+      </div>
+    </header>
     <main>
-      <header>
-        <h1>Sell More!</h1>
-        <p>
-          Open shop on our platform and <br />
-          increase your sales
-        </p>
-        <button>Open your shop</button>
-        <div class="header-img-container">
-          <img
-            class="header-img"
-            src="https://s3-alpha-sig.figma.com/img/c3f9/6a42/6648411f57f04aff84de5d247f55d2a8?Expires=1719792000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=U2XCLt6kDyMZigQk5C~lG2UxWdd0BZJkkcGxw5KajmQ5CJ8ALYFTTYmTy1Z5Ykwqj2Ib4A1bIXBaRlmQ-QfxgGf9zoYOSklKqnOrFA7qHeprpCZP4IajK25uBCtXkFbXBSd5XnQZC7IVr~IWu~vZ1lCNE7qjjbf~04bhHNt2hQWRNeKGrsCwV~aGtUgkK0hO6HxsaYPF4TeRKQePeQ7Wfn5Mg9r1NtxgRJJqJDQa1ss6wg97lIxTio18meDSeUOlqLRYoMouyc15MbjLnwgK4KT-Q6zggXf0~PvfZZ3eiHpVwzYyGza9T-~L8J4T~mUT1qftN7Sp2CPBMrBMKVgUQw__"
-          />
-        </div>
+      <section class="section1">
         <h3>
           The most popular <br />
           sales platform in <br />
@@ -90,16 +96,15 @@
           <p class="title"><strong>10000+</strong></p>
           <p class="text">added posts daily</p>
         </div>
-      </header>
+      </section>
+      <section id="section2"></section>
 
-      <section id="rectangle3"></section>
+      <section id="section3"></section>
 
-      <section id="price"></section>
-
-      <section id="contact"></section>
+      <section id="section4"></section>
     </main>
 
-    <footer>
+    <!-- <footer>
       <h2 class="logo_Oxygen">OXYGENShop</h2>
       <p class="copyright">© 2022 OXYGEN, All Rights Reserved</p>
       <div>
@@ -112,6 +117,6 @@
           <img />
         </div>
       </div>
-    </footer>
+    </footer> -->
   </body>
 </html>
