--- a/index.html
+++ b/index.html
@@ -13,9 +13,21 @@
     <link rel="stylesheet" type="text/css" href="./styles/index.css" />
     <link rel="stylesheet" type="text/css" href="./styles/nav/nav.css" />
     <link rel="stylesheet" type="text/css" href="./styles/header/header.css" />
-    <link rel="stylesheet" type="text/css" href="./styles/section1/section1.css" />
-    <link rel="stylesheet" type="text/css" href="./styles/Components/Cards/Card_section1/" />
-    
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="./styles/Components/card.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="./styles/section1/section1.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="./styles/section2/section2.css"
+    />
   </head>
   <body>
     <nav>
@@ -53,7 +65,7 @@
           sales platform in <br />
           country
         </h3>
-        <div class="card_header">
+        <div class="card_section1">
           <div class="container_icons">
             <div class="pink">
               <div class="container_vectors">
@@ -65,7 +77,7 @@
           <p class="title"><strong>100000+</strong></p>
           <p class="text">daily entries</p>
         </div>
-        <div class="card_header">
+        <div class="card_section1">
           <div class="container_icons">
             <div class="blue">
               <div class="container_vectors">
@@ -80,7 +92,7 @@
           <p class="title"><strong>2000000+</strong></p>
           <p class="text">seen products every day</p>
         </div>
-        <div class="card_header">
+        <div class="card_section1">
           <div class="container_icons">
             <div class="green">
               <div class="container_vectors">
@@ -97,8 +109,40 @@
           <p class="text">added posts daily</p>
         </div>
       </section>
-      <section id="section2"></section>
-
+      <section class="section2" id="section2"></section>
+      <div class="card_section2">
+        <div class="container_img">
+          <div class="circle">
+            <div class="pink"></div>
+          </div>
+          <img
+            class="img_pc"
+            src="https://s3-alpha-sig.figma.com/img/c3de/4c3c/968152a9810c2dd0dfe5197fa1160c1c?Expires=1719792000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=RiTGaCFHcswZimlZbC37Dpq43k6UEX~OySpFIGIuO9MeTNgm31e85kHanrwWmDjObtrvC-~J3Nt-GHUr-JjZrH1IL7zlH7iLgzvF3KsTXaUpto3bXXM0XWt2MtqstAFDHU9FmLc8JU3YIu-mrXzkwRBe70K7ZVZOxd3PcerDzFBS9eCaKPI9syvwmM08syX-evuw5grZ~BfRj2cRL29OEEyuLk-wJS-xysQd8eqLvnyhFcl9yCKyc~eGooqu94dCoWvvH1lvW5z9J1oHYCTnWyO93rEdycTDc7f8JKhdzmO~CQERRk03I-ovYrrwqpc6qxF7C9EgsJalkThf7Zq1Jw__"
+          />
+        </div>
+        <p class="title_section2">Be always first</p>
+        <p class="text_section2">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam.
+        </p>
+      </div>
+      <div class="card_section2">
+        <div class=""></div>
+        <div>
+          <img src="" />
+        </div>
+        <p></p>
+        <p></p>
+      </div>
+      <div class="card_section2">
+        <div class=""></div>
+        <div>
+          <img src="" />
+        </div>
+        <p></p>
+        <p></p>
+      </div>
       <section id="section3"></section>
 
       <section id="section4"></section>
