correct css and continue with section 2

--- a/index.html
+++ b/index.html
@@ -11,32 +11,15 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" type="text/css" href="./styles/index.css" />
-    <link rel="stylesheet" type="text/css" href="./styles/nav/nav.css" />
-    <link rel="stylesheet" type="text/css" href="./styles/header/header.css" />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="./styles/Components/card.css"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="./styles/section1/section1.css"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="./styles/section2/section2.css"
-    />
   </head>
   <body>
     <nav>
       <h2 class="logo_Oxygen">OXYGENShop</h2>
-      <div class="menu">
+      <figure class="menu">
         <img class="rectangle-menu" src="./images/vector_rectangle_menu.png" />
         <img class="rectangle-menu" src="./images/vector_rectangle_menu.png" />
         <img class="rectangle-menu" src="./images/vector_rectangle_menu.png" />
-      </div>
+      </figure>
       <ul>
         <li><a>WHY US</a></li>
         <li><a>BENEFITS</a></li>
@@ -51,12 +34,12 @@
         increase your sales
       </p>
       <button>Open your shop</button>
-      <div class="header-img-container">
+      <figure class="header-img-container">
         <img
           class="header-img"
           src="https://s3-alpha-sig.figma.com/img/c3f9/6a42/6648411f57f04aff84de5d247f55d2a8?Expires=1719792000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=U2XCLt6kDyMZigQk5C~lG2UxWdd0BZJkkcGxw5KajmQ5CJ8ALYFTTYmTy1Z5Ykwqj2Ib4A1bIXBaRlmQ-QfxgGf9zoYOSklKqnOrFA7qHeprpCZP4IajK25uBCtXkFbXBSd5XnQZC7IVr~IWu~vZ1lCNE7qjjbf~04bhHNt2hQWRNeKGrsCwV~aGtUgkK0hO6HxsaYPF4TeRKQePeQ7Wfn5Mg9r1NtxgRJJqJDQa1ss6wg97lIxTio18meDSeUOlqLRYoMouyc15MbjLnwgK4KT-Q6zggXf0~PvfZZ3eiHpVwzYyGza9T-~L8J4T~mUT1qftN7Sp2CPBMrBMKVgUQw__"
         />
-      </div>
+      </figure>
     </header>
     <main>
       <section class="section1">
@@ -109,40 +92,26 @@
           <p class="text">added posts daily</p>
         </div>
       </section>
-      <section class="section2" id="section2"></section>
-      <div class="card_section2">
-        <div class="container_img">
-          <div class="circle">
+      <section class="section2" id="section2">
+        <div class="card_section2">
+          <figure class="container_img">
             <div class="pink"></div>
+            <img
+              class="img_pc"
+              src="https://s3-alpha-sig.figma.com/img/c3de/4c3c/968152a9810c2dd0dfe5197fa1160c1c?Expires=1719792000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=RiTGaCFHcswZimlZbC37Dpq43k6UEX~OySpFIGIuO9MeTNgm31e85kHanrwWmDjObtrvC-~J3Nt-GHUr-JjZrH1IL7zlH7iLgzvF3KsTXaUpto3bXXM0XWt2MtqstAFDHU9FmLc8JU3YIu-mrXzkwRBe70K7ZVZOxd3PcerDzFBS9eCaKPI9syvwmM08syX-evuw5grZ~BfRj2cRL29OEEyuLk-wJS-xysQd8eqLvnyhFcl9yCKyc~eGooqu94dCoWvvH1lvW5z9J1oHYCTnWyO93rEdycTDc7f8JKhdzmO~CQERRk03I-ovYrrwqpc6qxF7C9EgsJalkThf7Zq1Jw__"
+            />
+          </figure>
+          <div class="text_card_section2">
+            <p class="title_section2">Be always first</p>
+            <p class="text_section2">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam.
+            </p>
           </div>
-          <img
-            class="img_pc"
-            src="https://s3-alpha-sig.figma.com/img/c3de/4c3c/968152a9810c2dd0dfe5197fa1160c1c?Expires=1719792000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=RiTGaCFHcswZimlZbC37Dpq43k6UEX~OySpFIGIuO9MeTNgm31e85kHanrwWmDjObtrvC-~J3Nt-GHUr-JjZrH1IL7zlH7iLgzvF3KsTXaUpto3bXXM0XWt2MtqstAFDHU9FmLc8JU3YIu-mrXzkwRBe70K7ZVZOxd3PcerDzFBS9eCaKPI9syvwmM08syX-evuw5grZ~BfRj2cRL29OEEyuLk-wJS-xysQd8eqLvnyhFcl9yCKyc~eGooqu94dCoWvvH1lvW5z9J1oHYCTnWyO93rEdycTDc7f8JKhdzmO~CQERRk03I-ovYrrwqpc6qxF7C9EgsJalkThf7Zq1Jw__"
-          />
         </div>
-        <p class="title_section2">Be always first</p>
-        <p class="text_section2">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam.
-        </p>
-      </div>
-      <div class="card_section2">
-        <div class=""></div>
-        <div>
-          <img src="" />
-        </div>
-        <p></p>
-        <p></p>
-      </div>
-      <div class="card_section2">
-        <div class=""></div>
-        <div>
-          <img src="" />
-        </div>
-        <p></p>
-        <p></p>
-      </div>
+        
+      </section>
       <section id="section3"></section>
 
       <section id="section4"></section>
