--- a/index.html
+++ b/index.html
@@ -93,25 +93,78 @@
         </div>
       </section>
       <section class="section2" id="section2">
-        <div class="card_section2">
-          <figure class="container_img">
-            <div class="pink"></div>
+        <div class="section2__card1">
+          <figure class="section2__card1__containerImg1">
             <img
-              class="img_pc"
+              class="section2__card1__containerImg1__rectangleMobile"
+              src="./images/rectangle_pink_mobile.png"
+            />
+            <img
+              class="section2__card1__containerImg1__rectanglePc"
+              src="./images/rectangle_pink_pc.png"
+            />
+            <img
+              class="section2__card1__containerImg1__pc"
               src="https://s3-alpha-sig.figma.com/img/c3de/4c3c/968152a9810c2dd0dfe5197fa1160c1c?Expires=1719792000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=RiTGaCFHcswZimlZbC37Dpq43k6UEX~OySpFIGIuO9MeTNgm31e85kHanrwWmDjObtrvC-~J3Nt-GHUr-JjZrH1IL7zlH7iLgzvF3KsTXaUpto3bXXM0XWt2MtqstAFDHU9FmLc8JU3YIu-mrXzkwRBe70K7ZVZOxd3PcerDzFBS9eCaKPI9syvwmM08syX-evuw5grZ~BfRj2cRL29OEEyuLk-wJS-xysQd8eqLvnyhFcl9yCKyc~eGooqu94dCoWvvH1lvW5z9J1oHYCTnWyO93rEdycTDc7f8JKhdzmO~CQERRk03I-ovYrrwqpc6qxF7C9EgsJalkThf7Zq1Jw__"
             />
           </figure>
-          <div class="text_card_section2">
-            <p class="title_section2">Be always first</p>
-            <p class="text_section2">
+          <div class="section2__card1__containerText1">
+            <p class="section2__card1__containerText1__title">
+              Be always first
+            </p>
+            <p class="section2__card1__containerText1__text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
               enim ad minim veniam.
             </p>
           </div>
         </div>
-        
+        <div class="section2__card1">
+          <figure class="section2__card1__containerImg1">
+            <img
+              class="section2__card1__containerImg1__circleBlue"
+              src="/images/section2_circle_blue.png"
+            />
+            <img
+              class="section2__card1__containerImg1__mobile"
+              src="/images/iphone.png"
+            />
+          </figure>
+          <div class="section2__card1__containerText1">
+            <p class="section2__card1__containerText1__title">
+              Your shop is<br />
+              where you are!
+            </p>
+            <p class="section2__card1__containerText1__text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam.
+            </p>
+          </div>
+        </div>
+        <div class="section2__card2">
+          <div class="section2__card2__containerText2">
+            <p class="section2__card2__containerText2__title">
+              Increase <br>recognition your brand!
+            </p>
+            <p class="section2__card2__containerText2__text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut <br>labore et dolore magna aliqua. Ut
+              enim ad minim veniam.
+            </p>
+          </div>
+          <figure class="section2__card2__containerImg2">
+            <img
+              src="/images/rectangle_green.png"
+            />
+            <img
+              class="section2__card2__containerImg2__megaphone"
+              src="/images/trumpet.png"
+            />
+          </figure>
+        </div>
       </section>
+
       <section id="section3"></section>
 
       <section id="section4"></section>
