review and correct global scss and html structure section3

--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
       </figure>
     </header>
     <main>
-      <section class="section1">
+      <!-- <section class="section1">
         <h3>
           The most popular <br />
           sales platform in <br />
           country
         </h3>
-        <div class="card_section1">
+        <article class="card_section1">
           <div class="container_icons">
             <div class="pink">
               <div class="container_vectors">
@@ -59,8 +59,8 @@
           </div>
           <p class="title"><strong>100000+</strong></p>
           <p class="text">daily entries</p>
-        </div>
-        <div class="card_section1">
+        </article>
+        <article class="card_section1">
           <div class="container_icons">
             <div class="blue">
               <div class="container_vectors">
@@ -74,8 +74,8 @@
           </div>
           <p class="title"><strong>2000000+</strong></p>
           <p class="text">seen products every day</p>
-        </div>
-        <div class="card_section1">
+        </article>
+        <article class="card_section1">
           <div class="container_icons">
             <div class="green">
               <div class="container_vectors">
@@ -90,10 +90,11 @@
           </div>
           <p class="title"><strong>10000+</strong></p>
           <p class="text">added posts daily</p>
-        </div>
-      </section>
-      <section class="section2" id="section2">
-        <div class="section2__card1">
+        </article>
+      </section> -->
+
+      <!-- <section class="section2" id="section2">
+        <article class="section2__card1">
           <figure class="section2__card1__containerImg1">
             <img
               class="section2__card1__containerImg1__rectangleMobile"
@@ -118,8 +119,8 @@
               enim ad minim veniam.
             </p>
           </div>
-        </div>
-        <div class="section2__card1">
+        </article>
+        <article class="section2__card1">
           <figure class="section2__card1__containerImg1">
             <img
               class="section2__card1__containerImg1__circleBlue"
@@ -141,8 +142,8 @@
               enim ad minim veniam.
             </p>
           </div>
-        </div>
-        <div class="section2__card2">
+        </article>
+        <article class="section2__card2">
           <div class="section2__card2__containerText2">
             <p class="section2__card2__containerText2__title">
               Increase <br>recognition your brand!
@@ -162,10 +163,168 @@
               src="/images/trumpet.png"
             />
           </figure>
-        </div>
-      </section>
+        </article>
+      </section> -->
 
-      <section id="section3"></section>
+      <section id="section3">
+        <h3>Pricing</h3>
+        <article class="section3__card3">
+          <div class="section3__card3__containerPrice">
+            <p class="section3__card3__containerPrice__basic">
+              <strong>Basic</strong>
+            </p>
+            <p class="section3__card3__containerPrice__price">$ 0</p>
+          </div>
+          <div class="section3__card3__containerFeature">
+            <div class="section3__card3__containerFeature__input">
+              <img
+                class="section3__card3__containerFeature__input__checkbox"
+                src="/images/Checkbox.png"
+              />
+              <img
+                class="section3__card3__containerFeature__input__checkbox"
+                src="/images/Checkbox.png"
+              />
+              <img
+                class="section3__card3__containerFeature__input__checkbox"
+                src="/images/Checkbox.png"
+              />
+              <img
+                class="section3__card3__containerFeature__input__checkbox"
+                src="/images/Cross.png"
+              />
+              <img
+                class="section3__card3__containerFeature__input__checkbox"
+                src="/images/Cross.png"
+              />
+            </div>
+            <div class="section3__card3__containerFeature__text">
+              <p class="section3__card3__containerFeature__text__title">
+                100 MB HDD
+              </p>
+              <p class="section3__card3__containerFeature__text__title">
+                1 Subdomain
+              </p>
+              <p class="section3__card3__containerFeature__text__title">
+                2 E-mails
+              </p>
+              <p class="section3__card3__containerFeature__text__title">
+                Two years license
+              </p>
+              <p class="section3__card3__containerFeature__text__title">
+                Full support
+              </p>
+            </div>
+          </div>
+          <button class="section2__card1__button">Begin</button>
+        </article>
+        <article class="section3__card3">
+          <div class="section3__card3__containerPrice">
+            <p class="section3__card3__containerPrice__basic">
+              <strong>Profesional</strong>
+            </p>
+            <p class="section3__card3__containerPrice__price">$ 25</p>
+            <p class="section3__card3__containerPrice__subtitle">
+              Limited offer
+            </p>
+          </div>
+          <div class="section3__card3__containerFeature">
+            <div class="section3__card3__containerFeature__input">
+              <img
+                class="section3__card3__containerFeature__input__checkbox"
+                src="/images/Checkbox.png"
+              />
+              <img
+                class="section3__card3__containerFeature__input__checkbox"
+                src="/images/Checkbox.png"
+              />
+              <img
+                class="section3__card3__containerFeature__input__checkbox"
+                src="/images/Checkbox.png"
+              />
+              <img
+                class="section3__card3__containerFeature__input__checkbox"
+                src="/images/Checkbox.png"
+              />
+              <img
+                class="section3__card3__containerFeature__input__checkbox"
+                src="/images/Cross.png"
+              />
+            </div>
+            <div class="section3__card3__containerFeature__text">
+              <p class="section3__card3__containerFeature__text__title">
+                500 MB HDD
+              </p>
+              <p class="section3__card3__containerFeature__text__title">
+                2 Subdomain
+              </p>
+              <p class="section3__card3__containerFeature__text__title">
+                5 E-mails
+              </p>
+              <p class="section3__card3__containerFeature__text__title">
+                One years license
+              </p>
+              <p class="section3__card3__containerFeature__text__title">
+                Full support
+              </p>
+            </div>
+          </div>
+          <button class="section2__card1__button">Begin</button>
+        </article>
+        <article class="section3__card3">
+          <div class="section3__card3__containerPrice">
+            <p class="section3__card3__containerPrice_basic">
+              <strong>Premium</strong>
+            </p>
+            <p class="section3__card3__containerPrice_price">$ 60</p>
+            <p class="section3__card3__containerPrice__subtitle">
+              Limited offer
+            </p>
+          </div>
+          <div class="section3__card3__containerFeature">
+            <div class="section3__card3__containerFeature__input">
+              <img
+                class="section3__card3__containerFeature__input__checkbox"
+                src="/images/Checkbox.png"
+              />
+              <img
+                class="section3__card3__containerFeature__input__checkbox"
+                src="/images/Checkbox.png"
+              />
+              <img
+                class="section3__card3__containerFeature__input__checkbox"
+                src="/images/Checkbox.png"
+              />
+              <img
+                class="section3__card3__containerFeature__input__checkbox"
+                src="/images/Checkbox.png"
+              />
+              <img
+                class="section3__card3__containerFeature__input__checkbox"
+                src="/images/Checkbox.png"
+              />
+            </div>
+            <div class="section3__card3__containerFeature__text">
+              <p class="section3__card3__containerFeature__text__title">
+                2 GB HDD
+              </p>
+              <p class="section3__card3__containerFeature__text__title">
+                5 Subdomain
+              </p>
+              <p class="section3__card3__containerFeature__text__title">
+                20 E-mails
+              </p>
+              <p class="section3__card3__containerFeature__text__title">
+                Two years license
+              </p>
+              <p class="section3__card3__containerFeature__text__title">
+                Full support
+              </p>
+            </div>
+          </div>
+          <button class="section2__card1__button">Begin</button>
+        </article>
+      </section>
 
       <section id="section4"></section>
     </main>
