--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" type="text/css" href="./styles/index.css" />
   </head>
   <body>
-    <nav>
+    <!-- <nav>
       <h2 class="logo_Oxygen">OXYGENShop</h2>
       <figure class="menu">
         <img class="rectangle-menu" src="./images/vector_rectangle_menu.png" />
@@ -40,9 +40,9 @@
           src="https://s3-alpha-sig.figma.com/img/c3f9/6a42/6648411f57f04aff84de5d247f55d2a8?Expires=1719792000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=U2XCLt6kDyMZigQk5C~lG2UxWdd0BZJkkcGxw5KajmQ5CJ8ALYFTTYmTy1Z5Ykwqj2Ib4A1bIXBaRlmQ-QfxgGf9zoYOSklKqnOrFA7qHeprpCZP4IajK25uBCtXkFbXBSd5XnQZC7IVr~IWu~vZ1lCNE7qjjbf~04bhHNt2hQWRNeKGrsCwV~aGtUgkK0hO6HxsaYPF4TeRKQePeQ7Wfn5Mg9r1NtxgRJJqJDQa1ss6wg97lIxTio18meDSeUOlqLRYoMouyc15MbjLnwgK4KT-Q6zggXf0~PvfZZ3eiHpVwzYyGza9T-~L8J4T~mUT1qftN7Sp2CPBMrBMKVgUQw__"
         />
       </figure>
-    </header>
+    </header> -->
     <main>
-      <!-- <section class="section1">
+       <!-- <section class="section1">
         <h3>
           The most popular <br />
           sales platform in <br />
@@ -91,9 +91,9 @@
           <p class="title"><strong>10000+</strong></p>
           <p class="text">added posts daily</p>
         </article>
-      </section> -->
+      </section> 
 
-      <!-- <section class="section2" id="section2">
+    <section class="section2" id="section2">
         <article class="section2__card1">
           <figure class="section2__card1__containerImg1">
             <img
@@ -166,14 +166,14 @@
         </article>
       </section> -->
 
-      <section id="section3">
+      <section class="section3">
         <h3>Pricing</h3>
         <article class="section3__card3">
           <div class="section3__card3__containerPrice">
             <p class="section3__card3__containerPrice__basic">
               <strong>Basic</strong>
             </p>
-            <p class="section3__card3__containerPrice__price">$ 0</p>
+            <p class="section3__card3__containerPrice__price">$0</p>
           </div>
           <div class="section3__card3__containerFeature">
             <div class="section3__card3__containerFeature__input">
@@ -215,15 +215,16 @@
                 Full support
               </p>
             </div>
+            <button class="section3__card3__button">Begin</button>
           </div>
-          <button class="section2__card1__button">Begin</button>
         </article>
+        
         <article class="section3__card3">
           <div class="section3__card3__containerPrice">
             <p class="section3__card3__containerPrice__basic">
               <strong>Profesional</strong>
             </p>
-            <p class="section3__card3__containerPrice__price">$ 25</p>
+            <p class="section3__card3__containerPrice__price">$25</p>
             <p class="section3__card3__containerPrice__subtitle">
               Limited offer
             </p>
@@ -269,14 +270,15 @@
               </p>
             </div>
           </div>
-          <button class="section2__card1__button">Begin</button>
+          <button class="section3__card3__button">Begin</button>
         </article>
+        
         <article class="section3__card3">
           <div class="section3__card3__containerPrice">
-            <p class="section3__card3__containerPrice_basic">
+            <p class="section3__card3__containerPrice__basic">
               <strong>Premium</strong>
             </p>
-            <p class="section3__card3__containerPrice_price">$ 60</p>
+            <p class="section3__card3__containerPrice__price">$60</p>
             <p class="section3__card3__containerPrice__subtitle">
               Limited offer
             </p>
@@ -322,7 +324,7 @@
               </p>
             </div>
           </div>
-          <button class="section2__card1__button">Begin</button>
+          <button class="section3__card3__button">Begin</button>
         </article>
       </section>
 
