section4 in progress

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </figure>
     </header> -->
     <main>
-       <!-- <section class="section1">
+      <!-- <section class="section1">
         <h3>
           The most popular <br />
           sales platform in <br />
@@ -91,7 +91,7 @@
           <p class="title"><strong>10000+</strong></p>
           <p class="text">added posts daily</p>
         </article>
-      </section> 
+      </section>
 
     <section class="section2" id="section2">
         <article class="section2__card1">
@@ -218,7 +218,7 @@
             <button class="section3__card3__button">Begin</button>
           </div>
         </article>
-        
+
         <article class="section3__card3">
           <div class="section3__card3__containerPrice">
             <p class="section3__card3__containerPrice__basic">
@@ -272,7 +272,7 @@
             <button class="section3__card3__button">Begin</button>
           </div>
         </article>
-        
+
         <article class="section3__card3">
           <div class="section3__card3__containerPrice">
             <p class="section3__card3__containerPrice__basic">
@@ -328,7 +328,61 @@
         </article>
       </section>
 
-      <section id="section4"></section>
+      <section class="section4">
+        <div class="section4__header">
+          <h1>Any questions?</h1>
+          <p class="section4__header__subtitle">
+            Leave your email address or call us!
+          </p>
+          <div class="section4__header__contact">
+            <div class="section4__header__contact__pack">
+              <img
+                class="section4__header__contact__pack__icon"
+                src="/images/icon_email.png"
+              />
+              <p class="section4__header__contact__pack__text">
+                info@bestshop.xyz
+              </p>
+            </div>
+            <div class="section4__header__contact__pack">
+              <img
+                class="section4__header__contact__icon"
+                src="/images/icon_phone.png"
+              />
+              <p class="section4__header__contact__pack__text">123456789</p>
+            </div>
+            <div class="section4__header__contact__pack">
+              <img
+                class="section4__header__contact__pack__icon"
+                src="/images/icon_linkedin.jpg"
+              />
+              <a class="section4__header__contact__pack__text" href="https://www.linkedin.com/in/alejandrogarciacarmona/">Alejandro García Carmona</a>
+              <!-- <link></link> -->
+            </div>
+          </div>
+        </div>
+        <div class="section4__form">
+          <form>
+            <label>NAME</label>
+            <input />
+            <label>EMAIL:</label>
+            <input />
+            <input type="checkbox" />
+            <p>
+              I hereby give consent for my personal data <br />
+              included in my application to be processed for <br />
+              the purposes of the recruitment process under <br />
+              the European Parliament’s and Council of the <br />
+              European Union Regulation on the Protection of <br />
+              Natural Persons as of 27 April 2016, with regard <br />
+              to the processing of personal data and on the <br />
+              free movement of such data, and repealing <br />
+              Directive 95/46/EC (Data Protection Directive)
+            </p>
+            <button>Send</button>
+          </form>
+        </div>
+      </section>
     </main>
 
     <!-- <footer>
