change url by img_iphone

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             />
             <img
               class="section2__card1__containerImg1__pc"
-              src="https://s3-alpha-sig.figma.com/img/c3de/4c3c/968152a9810c2dd0dfe5197fa1160c1c?Expires=1719792000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=RiTGaCFHcswZimlZbC37Dpq43k6UEX~OySpFIGIuO9MeTNgm31e85kHanrwWmDjObtrvC-~J3Nt-GHUr-JjZrH1IL7zlH7iLgzvF3KsTXaUpto3bXXM0XWt2MtqstAFDHU9FmLc8JU3YIu-mrXzkwRBe70K7ZVZOxd3PcerDzFBS9eCaKPI9syvwmM08syX-evuw5grZ~BfRj2cRL29OEEyuLk-wJS-xysQd8eqLvnyhFcl9yCKyc~eGooqu94dCoWvvH1lvW5z9J1oHYCTnWyO93rEdycTDc7f8JKhdzmO~CQERRk03I-ovYrrwqpc6qxF7C9EgsJalkThf7Zq1Jw__"
+              src='./images/img_iPhone.png'
             />
           </figure>
           <div class="section2__card1__containerText1">
