change url by img_pc

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             />
             <img
               class="section2__card1__containerImg1__pc"
-              src='./images/img_iPhone.png'
+              src='./images/img_pc.png'
             />
           </figure>
           <div class="section2__card1__containerText1">
